<resources>
    <string name="app_name">Home Keeper</string>
    <string name="welcome_home">Welcome Home</string>
    <string name="welcome_desc">Every connection you ever need is here</string>
    <string name="welcome_get_started">Get started</string>
    <string name="login_login">Login</string>
    <string name="login_guide">One tap login with your Google Accounts</string>
    <string name="login_login_w_google">Login With Google</string>
    <string name="login_step_1_2">Step 1/3</string>
    <string name="login_logged_in_as">Logged in as</string>
    <string name="login_tap_to_change_account">Tap to change</string>
    <string name="login_next_step">Next>></string>
    <string name="connect_step_2_2">Step 2/3</string>
    <string name="connect_finish">Finish</string>
    <string name="connect_connect_your_device">Connect your House Keeper</string>
    <string name="connect_device_id">Device ID</string>
    <string name="connect_device_password">Provided password</string>
    <string name="connect_connect">Connect</string>
    <string name="connect_back">&#x3C;&#x3C;Back</string>
    <string name="air_con_fan">Fan</string>
    <string name="air_con_mode">Mode</string>
    <string name="air_con_temp">Temperature</string>
    <string name="air_con_swing">Swing</string>
    <string name="air_con_sleep">Sleep</string>
    <string name="air_con_turbo">Turbo</string>
    <string name="fan_hi">Hi</string>
    <string name="fan">Med</string>
    <string name="fan_low">LOW</string>
    <string name="fan_power">Power</string>
    <string name="remote_see_more">See more devices</string>
    <string name="session_expired">Session Expired</string>
    <string name="session_expired_detail">You have been logged out, please login again to continue</string>
    <string name="ok">OK</string>
    <string name="bottom_settings">Settings</string>
    <string name="bottom_help">Help &#x26; feedback</string>
    <string name="bottom_logout">Logout</string>
    <string name="bottom_privacy">Privacy Policy</string>
    <string name="bottom_information">Information</string>
    <string name="signout_confirm">Signing out</string>
    <string name="signout_confirm_detail">You are about to be signed out. Are you sure you want to do this?</string>
    <string name="cancel">Cancel</string>
    <string name="splash_error_detail">Please check your internet connection.</string>
    <string name="main_no_devices_yet">Seem a little boring here, press + to add a new device</string>
    <string name="remote_connecting">Connecting to server, please wait!</string>
    <string name="main_add_device">Add new device</string>
    <string name="main_tv">TV</string>
    <string name="main_add_fan">Fan</string>
    <string name="main_add_air_con">Air Conditioner</string>
    <string name="tv_channel">Channel</string>
    <string name="add_new_tv">New TV</string>
    <string name="add_new_fan">New Fan</string>
    <string name="add_new_air_con">New Air Conditioner</string>
    <string name="add_please_wait">Please Wait</string>
    <string name="add_wait_for_response">Waiting for response</string>
    <string name="connect_id_error">Device ID must include at least 5 characters</string>
    <string name="add_save">Save device</string>
    <string name="add_device_name_hint">Device Name</string>
    <string name="error_no_empty">This field cannot be empty</string>
    <string name="add_success">Add device successed</string>
    <string name="add_error">Add device failed</string>
    <string name="unkown_error">An error occurred, try again later!</string>
    <string name="config_step_3_3" >Step 3/3</string>
    <string name="config_title">Config Wi-Fi for the HUB</string>
    <string name="config_wifi_ssid">Wi-Fi SSID</string>
    <string name="config_wifi_password">password</string>
    <string name="config_tip">Please connect your device to Wi-Fi %1$s with password %2$s</string>
    <string name="config_wait">Loading...</string>
    <string name="config_please_wait">Waiting for Hub to connect to Wi-Fi</string>
</resources>
