<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/img_background"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="bottom|center_horizontal"
        android:padding="16dp"
        app:srcCompat="@drawable/fan" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_device_name"
                app:layout_constraintVertical_bias="0.31">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_power_settings_new_white_24dp"
                    android:tag="power"
                    app:backgroundTint="@color/color_red"
                    app:elevation="0dp"
                    app:fabSize="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_swing_horz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/color_orange"
                    android:tag="swing_horz"
                    android:text="@string/air_con_swing"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/ic_swap_horiz_white_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_low"
                    tools:ignore="MissingPrefix" />

                <Button
                    android:id="@+id/btn_sleep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/color_orange"
                    android:tag="sleep"
                    android:text="@string/air_con_sleep"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/ic_sleep"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_swing_horz"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_swing_horz"
                    app:layout_constraintTop_toTopOf="@+id/btn_swing_horz" />

                <Button
                    android:id="@+id/btn_hi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:tag="hi"
                    android:text="@string/fan_hi"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_power" />

                <Button
                    android:id="@+id/btn_med"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:tag="med"
                    android:text="@string/fan"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_hi"
                    app:layout_constraintEnd_toStartOf="@+id/btn_hi"
                    app:layout_constraintStart_toEndOf="@+id/btn_low"
                    app:layout_constraintTop_toTopOf="@+id/btn_hi" />

                <Button
                    android:id="@+id/btn_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:tag="low"
                    android:text="@string/fan_low"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_med"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_med" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/fan_power"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_power"
                    app:layout_constraintStart_toEndOf="@+id/btn_power"
                    app:layout_constraintTop_toTopOf="@+id/btn_power" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>